--- a/src/dlg-goto/com/list/list.css
+++ b/src/dlg-goto/com/list/list.css
@@ -1,33 +1,34 @@
-.notepad-com-list {
+.notepad-com-list{
   user-select: none;
-  width: 200px;
+  width:200px
 }
 
-.notepad-com-list .editor {
-  border: 1px solid #0078d7;
+.notepad-com-list .editor{
+  border:1px solid #0078d7;
   box-sizing: border-box;
   font-size: 1em;
   height: 20px;
-  padding-left: 2px;
-  width: 100%;
+  padding-left:2px;
+  width:100%
 }
 
-.notepad-com-list .list {
+.notepad-com-list .list{
   background-color: white;
-  border: 1px solid #828790;
+  border:1px solid #828790;
   box-sizing: border-box;
   display: inline-block;
   height: 116px;
-  overflow-y: scroll;
-  width: 100%;
+  /* 滚动条 */
+  overflow-y:scroll;
+  width:100%
 }
 
-.notepad-com-list .list .item {
+.notepad-com-list .list .item{
   line-height: 16px;
-  padding-left: 2px;
+  padding-left:2px;
 }
 
-.notepad-com-list .list .selected {
-  background-color: #0078d7;
-  color: white;
+.notepad-com-list .list .selected{
+  background: #0078d7;
+  color:white
 }
